<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Blackboard</string>

    <string name="author_name">Geelaro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_desc">不穿冲锋衣的码农</string>


    <!--<string name="action_settings">Settings</string>-->
    <string name="action_refresh">Refresh</string>

    <!-- Activities's Titles -->
    <string name="title_activity_settings">Settings</string>

    <string name="menu_settings">Settings</string>

    <!--Fragment Names-->
    <string name="fragment_weather">Weather</string>
    <string name="fragment_news">News</string>
    <string name="fragment_movies">Movie</string>
    <string name="fragment_images">Image</string>
    <string name="fragment_me">About</string>

    <!-- News titles -->
    <string name="news_top">Top</string>
    <string name="news_nba">NBA</string>
    <string name="news_cars">Car</string>
    <string name="news_jokes">Jokes</string>

    <string name="news_share">Share</string>

    <!-- Image Fragment -->
    <string name="image_hit">一次加载20条数据，请刷新更新。</string>
    <string name="load_fail">数据加载错误！</string>

    <!-- Temperature formats in degrees -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!--About Me -->
    <string name="app_description">Blackboard是一个集天气、新闻、图片的聚合App，是教室后排的黑板报。</string>
    <string name="app_url">项目地址：https://github.com/geelaro/blackboard</string>
    <string name="author">作者：Geelaro Li</string>>
    <string name="app_email">邮箱：geelaro.li@gmail.com</string>

    <!-- Strings related to Settings -->

    <!-- Location Settings -->
    <string name="pref_location_label">Location:Input the City Name in Pinyin</string>

    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Nanjing</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_weather_notifications">Weather Notifications</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <!-- NOtification Form -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <string name="pref_title_language">Language</string>
    <string name="pref_key_language">language_list</string>
    <string-array name="language_list_titles">
        <item>AUTO</item>
        <item>简体中文</item>
        <item>ENGLISH</item>
    </string-array>
    <string-array name="language_list_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Movies -->
    <string name="format_score">Score: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="movie_top250">Top250</string>
    <string name="movie_live">Live</string>
</resources>
